--- a/1-node-farm/starter/templates/template-card.html
+++ b/1-node-farm/starter/templates/template-card.html
@@ -1,12 +1,12 @@
 <figure class="card">
-  <div class="card__emoji">{%image%}{%image%}</div>
+  <div class="card__emoji">{%image%}</div>
 
   <div class="card__title-box">
     <h2 class="card__title">{%product__name%}</h2>
   </div>
 
   <div class="card__details">
-    <div class="card__detail-box" {%not_organic%}>
+    <div class="card__detail-box {%not_organic%}">
       <h6 class="card__detail card__detail--organic">Organic!</h6>
     </div>
 
